# Company-Database

./: README.md  creatDatabase&Tables.py  data.db  delete.py  insert.py  insertValues.py  main.py  pyproject.toml  sales.py  salesHistoryGenerator.py  search.py  tools.py  update.py
